# traa

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  traa.code-workspace
app/: CMakeLists.txt
app/src/: main.cc
src/base/: CMakeLists.txt  arch.h  arraysize.h  checks.cc  checks.h  checks_unittest.cc  disallow.h  function_view.h  logger.cc  logger.h  platform.h  platform_thread.cc  platform_thread.h  platform_thread_types.cc  platform_thread_types.h  platform_thread_unittest.cc  random.cc  random.h  random_test.cc  singleton.h  string_to_number.cc  string_to_number.h  string_to_number_unittest.cc  string_utils.cc  string_utils.h  string_utils_unittest.cc  thread_annotations.h  type_traits.h  win32.h
src/base/base64/: CMakeLists.txt  base64.cc  base64.h
src/base/devices/: CMakeLists.txt
src/base/devices/screen/: CMakeLists.txt  blank_detector_desktop_capturer_wrapper.cc  blank_detector_desktop_capturer_wrapper.h  blank_detector_desktop_capturer_wrapper_unittest.cc  cropped_desktop_frame.cc  cropped_desktop_frame.h  cropped_desktop_frame_unittest.cc  delegated_source_list_controller.h  desktop_capture_metrics_helper.cc  desktop_capture_metrics_helper.h  desktop_capture_options.cc  desktop_capture_options.h  desktop_capture_types.h  desktop_capturer.cc  desktop_capturer.h  desktop_capturer_differ_wrapper.cc  desktop_capturer_differ_wrapper.h  desktop_capturer_differ_wrapper_test.cc  desktop_capturer_differ_wrapper_unittest.cc  desktop_frame.cc  desktop_frame.h  desktop_frame_generator.cc  desktop_frame_generator.h  desktop_frame_rotation.cc  desktop_frame_rotation.h  desktop_frame_rotation_unittest.cc  desktop_frame_unittest.cc  desktop_geometry.cc  desktop_geometry.h  desktop_geometry_unittest.cc  desktop_region.cc  desktop_region.h  desktop_region_unittest.cc  differ_block.cc  differ_block.h  differ_block_unittest.cc  differ_vector_sse2.cc  differ_vector_sse2.h  enumerator.cc  enumerator.h  (+35 more)
src/base/devices/screen/darwin/: desktop_configuration.h  desktop_configuration.mm  desktop_configuration_monitor.cc  desktop_configuration_monitor.h  desktop_frame_cgimage.h  desktop_frame_cgimage.mm  desktop_frame_iosurface.h  desktop_frame_iosurface.mm  desktop_frame_provider.h  desktop_frame_provider.mm  desktop_frame_utils.cc  desktop_frame_utils.h  enumerator_darwin.mm  full_screen_mac_application_handler.cc  full_screen_mac_application_handler.h  screen_capturer_darwin.mm  screen_capturer_mac.h  screen_capturer_mac.mm  screen_capturer_mac_unittest.cc  screen_capturer_sck.h  screen_capturer_sck.mm  window_capturer_mac.mm  window_finder_mac.h  window_finder_mac.mm  window_list_utils.cc  window_list_utils.h
src/base/devices/screen/linux/: capture_utils.cc  capture_utils.h  enumerator_linux.cc
src/base/devices/screen/linux/x11/: shared_x_display.cc  shared_x_display.h  x_atom_cache.cc  (+9 more)
src/base/devices/screen/posix/: enumerator_posix.cc
src/base/devices/screen/test/: desktop_frame_generator.cc  desktop_frame_generator.h  fake_desktop_capturer.cc  fake_desktop_capturer.h  mock_desktop_capturer_callback.cc  mock_desktop_capturer_callback.h  screen_drawer.cc  screen_drawer.h  screen_drawer_linux.cc  screen_drawer_lock_posix.cc  screen_drawer_lock_posix.h  screen_drawer_mac.cc  screen_drawer_unittest.cc  screen_drawer_win.cc  test_utils.cc  test_utils.h  test_utils_unittest.cc
src/base/devices/screen/win/: capture_utils.cc  capture_utils.h  cropping_window_capturer.cc  cropping_window_capturer.h  cropping_window_capturer_win.cc  cursor.cc  cursor.h  cursor_unittest.cc  d3d_device.cc  d3d_device.h  desktop_capture_utils.cc  desktop_capture_utils.h  desktop_frame_win.cc  desktop_frame_win.h  display_configuration_monitor.cc  display_configuration_monitor.h  dwm_helper.cc  dwm_helper.h  enumerator_win.cc  full_screen_win_application_handler.cc  full_screen_win_application_handler.h  gdi_helper.cc  gdi_helper.h  scoped_gdi_object.h  scoped_object_gdi.h  scoped_thread_desktop.cc  scoped_thread_desktop.h  screen_capturer_win.cc  screen_capturer_win_directx.cc  screen_capturer_win_directx.h  screen_capturer_win_directx_unittest.cc  screen_capturer_win_gdi.cc  screen_capturer_win_gdi.h  selected_window_context.cc  selected_window_context.h  thread_desktop.cc  thread_desktop.h  thumbnail.cc  thumbnail.h  window_capturer_win.cc  (+4 more)
src/base/folder/: CMakeLists.txt  folder.cc  folder.h  folder_android.cc  folder_darwin.mm  folder_win.cc
src/base/log/: logger.cc  logger.h
src/base/numerics/: CMakeLists.txt  moving_average.cc  moving_average.h  moving_average_unittest.cc  safe_compare.h  safe_compare_unittest.cc
src/base/os/win/: version.cc
src/base/sdk/objc/helpers/: scoped_cftyperef.h
src/base/strings/: CMakeLists.txt  ascii.cc  ascii.h  string_trans.cc  string_trans.h
src/base/system/: CMakeLists.txt  cpu_features.cc  cpu_features_android.cc  cpu_features_linux.cc  cpu_features_wrapper.h  cpu_info.cc  cpu_info.h  metrics.cc  metrics.h  metrics_default_unittest.cc  metrics_unittest.cc  sleep.cc  sleep.h  system_time.cc  system_time.h
src/base/thread/: CMakeLists.txt  callback.h  callback_test.cc  ffuture.cc  ffuture.h  ffuture_unittest.cc  rw_lock.h  rw_lock_darwin.cc  rw_lock_linux.cc  rw_lock_test.cc  rw_lock_win.cc  task_queue.h  task_queue_test.cc  thread_util.h  thread_util_darwin.cc  thread_util_linux.cc  thread_util_posix.cc  thread_util_test.cc  thread_util_win.cc  waitable_future.h  waitable_future_test.cc  waitable_future_unittest.cc
src/base/utils/: CMakeLists.txt  time_utils.cc  time_utils.h  time_utils_unittest.cc
src/base/utils/win/: create_direct3d_device.cc  create_direct3d_device.h  get_activation_factory.cc  get_activation_factory.h  hstring.cc  hstring.h  registry.cc  registry.h  scoped_com_initializer.cc  scoped_com_initializer.h  version.cc  version.h
src/main/: CMakeLists.txt  engine.cc  engine.h  main.cc  traa.cc
src/main/utils/: obj_string.h
tests/smoke_test/: CMakeLists.txt
tests/smoke_test/src/: traa_engine_test.cc
tests/unit_test/: CMakeLists.txt
tests/unit_test/src/: main.cc
tests/unit_test/src/utils/: test_logger.h
(+68 files in other folders)
