project(traa-console)

# Set boundle to OFF for console application
set(CMAKE_MACOSX_BUNDLE OFF)

set(TRAA_CONSOLE traa-console)

set(TRAA_CONSOLE_OUTPUT_DIR ${CMAKE_BINARY_DIR}/output)
set(TRAA_CONSOLE_OUTPUT_NAME ${TRAA_CONSOLE})

set(TRAA_CONSOLE_SOURCES)
file(GLOB_RECURSE TRAA_CONSOLE_SOURCES "${CMAKE_CURRENT_LIST_DIR}/src/**")
source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${TRAA_CONSOLE_SOURCES})

set(TRAA_CONSOLE_INCLUDES)
list(APPEND TRAA_CONSOLE_INCLUDES "${CMAKE_CURRENT_LIST_DIR}/src")
list(APPEND TRAA_CONSOLE_INCLUDES "${TRAA_LIBRARY_PUBLIC_HEADER_DIRS}")

add_executable(${TRAA_CONSOLE} ${TRAA_CONSOLE_SOURCES})
target_link_libraries(${TRAA_CONSOLE} PRIVATE ${TRAA_LIBRARY})
target_include_directories(${TRAA_CONSOLE} PRIVATE "$<BUILD_INTERFACE:${TRAA_CONSOLE_INCLUDES}>")
set_target_properties(${TRAA_CONSOLE} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${TRAA_CONSOLE_OUTPUT_DIR}"
    LIBRARY_OUTPUT_DIRECTORY "${TRAA_CONSOLE_OUTPUT_DIR}"
    RUNTIME_OUTPUT_DIRECTORY "${TRAA_CONSOLE_OUTPUT_DIR}"
    PDB_OUTPUT_DIRECTORY "${TRAA_CONSOLE_OUTPUT_DIR}"
    OUTPUT_NAME "${TRAA_CONSOLE_OUTPUT_NAME}"
)

add_dependencies(${TRAA_CONSOLE} ${TRAA_LIBRARY})