set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

enable_testing()

set(TRAA_SMOKE_TEST traa-smoke-test)
set(TRAA_SMOKE_TEST_OUTPUT_NAME ${TRAA_SMOKE_TEST})

file(GLOB_RECURSE TRAA_SMOKE_TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/**)
source_group("test" FILES ${TRAA_SMOKE_TEST_FILES})

set(TRAA_SMOKE_TEST_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${TRAA_LIBRARY_PUBLIC_HEADER_INCLUDE_DIR}
)

add_executable(${TRAA_SMOKE_TEST} ${TRAA_SMOKE_TEST_FILES})
target_link_libraries(${TRAA_SMOKE_TEST} PRIVATE ${TRAA_LIBRARY} gtest gtest_main gmock gmock_main)

target_include_directories(${TRAA_SMOKE_TEST} PRIVATE "$<BUILD_INTERFACE:${TRAA_SMOKE_TEST_INCLUDE_DIRS}>")
set_target_properties(${TRAA_SMOKE_TEST} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR}"
    LIBRARY_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR}"
    RUNTIME_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR}"
    PDB_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR}"
    OUTPUT_NAME "${TRAA_SMOKE_TEST_OUTPUT_NAME}"
)

# platform flags
if(APPLE)
    set(TRAA_SMOKE_TEST_IDENTIFIER "io.traa.smoketest")

    target_link_libraries(${TRAA_SMOKE_TEST} PRIVATE "${TRAA_LIBRARY_FRAMEWORKS}")

    set_target_properties(${TRAA_SMOKE_TEST} PROPERTIES
        FRAMEWORK TRUE
        FRAMEWORK_VERSION A
        MACOSX_FRAMEWORK_IDENTIFIER "${TRAA_SMOKE_TEST_IDENTIFIER}"
        MACOSX_FRAMEWORK_SHORT_VERSION_STRING "${TRAA_VERSION_SHORT}"
        MACOSX_FRAMEWORK_BUNDLE_VERSION "${TRAA_VERSION_SHORT}"
        CXX_VISIBILITY_PRESET hidden
        LINK_FLAGS "-Wl ${TRAA_SMOKE_TEST_FRAMEWORKS_FOLDERS} -rpath @loader_path"
    )

    set_target_properties(${TRAA_SMOKE_TEST} PROPERTIES XCODE_ATTRIBUTE_ENABLE_BITCODE "NO")
elseif(WIN32)
elseif(ANDROID)
    set_target_properties(${TRAA_SMOKE_TEST} PROPERTIES
        CXX_VISIBILITY_PRESET hidden
        ARCHIVE_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR_REAL}"
        LIBRARY_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR_REAL}"
        RUNTIME_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR_REAL}"
        PDB_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR_REAL}"
    )
elseif(UNIX)
    set_target_properties(${TRAA_SMOKE_TEST} PROPERTIES
        ARCHIVE_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR_REAL}"
        LIBRARY_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR_REAL}"
        RUNTIME_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR_REAL}"
        PDB_OUTPUT_DIRECTORY "${TRAA_OUTPUT_DIR_REAL}"
        LINK_FLAGS "-Wl,-rpath,./"
    )
endif()

include(GoogleTest)
gtest_discover_tests(${TRAA_SMOKE_TEST})